--- a/public/email-template/emailBatch1.html
+++ b/public/email-template/emailBatch1.html
@@ -58,43 +58,47 @@
             class="mobile-padding"
             style="padding-left: 25px; padding-right: 25px; color: white"
           >
-            <p style="color: white">
-              CONGRATS! Anda Resmi Terdaftar di event HACKTTACK 2025🚀
+            <p style="color: white; text-align: center; font-size: 24px;">
+              🚀 Selamat! Kamu Resmi Terdaftar di Hackattack 2025 Batch 1 + 2 Workshop Gratis!
             </p>
-            <p style="color: white"><strong>Hi {{teamLeader}}!</strong></p>
-            <h1 style="color: white"><p style="color: white">CONGRATS!</p></h1>
-            <p style="color: white">
-              Kami sangat senang Anda bergabung dengan ratusan inovator lainnya
-              untuk "Tech for Nusantara: Digitalization for the Nation.".
-              Pastikan Anda mencatat detail terpenting ini:
+            <p style="color: white"><strong>Halo {{teamLeader}}!</strong></p>
+              <p style="color: white">
+              Terima kasih telah mendaftarkan dirimu di <b>Hackattack 2025</b> Batch 1! 🎉 Kami sangat senang Anda bergabung dengan ratusan inovator lainnya untuk <b>“Tech for Nusantara: Digitalization for the Nation.”</b>.
             </p>
+            <p>‼️ Pastikan Anda mencatat detail terpenting ini:</p>
             <ul style="color: white; padding-left: 10px; list-style-type: none">
               <li style="color: white">
-                Deadline Submit Berkas Hackattack : 04 November 2025
-              </li>
-              <li style="color: white">Via Website : hackattack.ac.id</li>
-            </ul>
-            <p style="color: white">
-              Untuk menambahkan wawasan kamu, digratiskan hanya untuk kamu yang
-              mendaftar di gelombang pertama yaitu 2 Workshop yang akan di
-              laksanakan pada :
-            </p>
-            <ul style="color: white; padding-left: 10px; list-style-type: none">
-              <li style="color: white">
-                Tanggal Pelaksanaan Workshop 1 : 05 November 2025.
+                📆 Deadline Submit Berkas Hackattack : 04 November 2025
               </li>
               <li style="color: white">
-                Tanggal Pelaksanaan Workshop 2 : 12 November 2025.
+                🔗 Via Website : hackattack2025.himfaiftelkom.com
               </li>
             </ul>
             <p style="color: white">
-              Langkah WAJIB Berikutnya: Gabung WA Group! Semua komunikasi utama,
-              pengumuman penting, detail teknis, dan sesi pencarian tim akan
-              dikoordinasikan melalui WhatsApp Group resmi.
+                Sebagai peserta Batch 1 🤩✨, kamu tidak hanya mendapat kesempatan untuk berkompetisi dalam Hackathon, tapi juga akan langsung mendapatkan akses GRATIS ke dua workshop eksklusif yang dirancang khusus untuk mempersiapkan ide dan solusi timmu, yang akan di laksanakan pada :
             </p>
+            <ol style="color: white;">
+              <li style="color: white">
+                <b>Hackattack - Decode the Problem: Framing Ideas into Digital Impact for Nusantara</b><br>
+                📅 Minggu, 9 November 2025 | 🕖 13.00 - 16.00 WIB
+              </li>
+              <li style="color: white">
+                <b>Hackattack - Code the Solution: Prototyping Smart Innovations for Real-World Impact</b><br>
+                📅 Minggu, 23 November 2025 | 🕖 13.00 - 16.00 WIB
+              </li>
+            </ol>
             <p style="color: white">
-              Untuk KETUA TIM Pastikan Anda segera bergabung agar tidak
-              ketinggalan informasi krusial!
+              🎯 Dengan mengikuti workshop ini, kamu akan mendapatkan:
+              <ul>
+                <li style="color: white">Wawasan langsung dari mentor berpengalaman di bidang inovasi digital</li>
+                <li style="color: white">Sertifikat resmi sebagai bukti pengembangan kompetensi</li>
+                <li style="color: white">Poin TAK (Student Activity Transcript) Telkom University</li>
+                <li style="color: white">Networking dengan peserta dan inovator muda lainnya</li>
+              </ul>
+            </p>
+             <p style="color: white">
+              Langkah WAJIB Berikutnya: <b>Gabung WA Group!</b><br>
+              Seluruh pengumuman serta informasi penting akan disampaikan lewat WhatsApp Group resmi. Untuk <b>KETUA TIM</b> Pastikan Anda segera bergabung agar tidak ketinggalan informasi krusial!
             </p>
             <a
               href="https://chat.whatsapp.com/Cajsa1MA7CQ3gJ9UfTWy0P?mode=ems_copy_t"
@@ -103,8 +107,10 @@
               https://chat.whatsapp.com/Cajsa1MA7CQ3gJ9UfTWy0P?mode=ems_copy_t
             </a>
             <p style="color: white">
-              Kami tidak sabar untuk melihat apa yang akan Anda ciptakan. Get
-              ready to innovate!
+              🚀 Jadi, pastikan kamu hadir dan aktif mengikuti semua rangkaian kegiatan! Untuk memudahkan, kami akan mengirimkan detail teknis dan link workshop melalui email beberapa hari sebelum acara dimulai.
+            </p>
+            <p style="color: white">
+              Jika membutuhkan informasi tambahan, silakan hubungi contact person kami yang tercantum di bawah.
             </p>
           </td>
         </tr>
@@ -113,18 +119,21 @@
             class="mobile-padding"
             style="padding-left: 25px; padding-right: 25px; color: white"
           >
+          <p style="color: white">📞 Contact Person:</p>
             <ul style="list-style-type: none; padding: 0; color: white">
-              <li style="color: white">Salam Hangat, Team HackAttack2025</li>
-              <li style="color: white">
-                🚨 IG:
-                <a
-                  href="https://www.instagram.com/hackattack.ccihimaif/"
-                  style="color: white; text-decoration: underline"
-                  >@hackattack.ccihimaif</a
-                >
-              </li>
-              <li style="color: white">🔥 Powered by Hima IF x CCI Summit</li>
+              <li style="color: white">WhatsApp: +62 821-7876-1450 (Bara)</li>
+              <li style="color: white">WhatsApp: +62 813-7860-0688 (Naila)</li>
+              <li style="color: white">Email: hackattack.ccihimaif25@gmail.com</li>
             </ul>
+          </td>
+        </tr>
+        <tr>
+          <td 
+            class="mobile-padding"
+            style="padding-left: 25px; padding-right: 25px; color: white"
+            >
+            <p style="color: white">Salam hangat, <br>
+          Tim Penyelenggara Hackattack 2025.</p>
           </td>
         </tr>
       </table>
