--- a/public/email-template/emailFailedRegist.html
+++ b/public/email-template/emailFailedRegist.html
@@ -61,8 +61,6 @@
             <p style="color: white">PENTING: Pendaftaran HACKATTACK 2025 Anda Perlu Diperbaiki ⚠️</p>
 
             <p>Hai <strong>{{teamLeader}}</strong></p>
-            <p>Terima kasih atas antusiasme Anda untuk mendaftar di HACKATTACK2025</p>
-            <h1 style="color: white"><p style="color: white">CONGRATS!</p></h1>
             <p style="color: white">
               Saat melakukan verifikasi data, kami menemukan bahwa pendaftaran Anda belum dapat kami proses karena terdapat 
             </p>
@@ -96,7 +94,6 @@
                 margin-bottom: 0;
                 margin-top: 20px;
               ">
-                CP Panitia : 0857 1633 7148 - Faiq Haqqani
               </p>
             </div>
             
@@ -110,33 +107,33 @@
               https://www.figma.com/design/OoZALSutXFS9ePSXclSJmy/draft-hackatton?node-id=1396-1711&t=tkUTYqfZvHsPtZke-1
             </a>
             <p style="color: white">
-              <strong>PENTING:</strong> Pendaftaran akan ditutup pada 03 November 2025.
-            </p>
-            <p style="color: white">
-              Jika Anda mengalami kendala teknis atau memiliki pertanyaan, jangan ragu untuk menghubungi kami melalui email hackattack.ccihimaif25@gmail.com.
+              Jika Anda mengalami kendala teknis atau memiliki pertanyaan, jangan ragu untuk menghubungi kami melalui email hackattack.ccihimaif25@gmail.com ataupun Contact Person dibawah ini
             </p>
             <p style="color: white">
               Kami tunggu pendaftaran Anda yang sudah valid!
             </p>
           </td>
         </tr>
-        <tr>
+       <tr>
           <td
             class="mobile-padding"
             style="padding-left: 25px; padding-right: 25px; color: white"
           >
+          <p style="color: white">📞 Contact Person:</p>
             <ul style="list-style-type: none; padding: 0; color: white">
-              <li style="color: white">Salam Hangat, Team HackAttack2025</li>
-              <li style="color: white">
-                🚨 IG:
-                <a
-                  href="https://www.instagram.com/hackattack.ccihimaif/"
-                  style="color: white; text-decoration: underline"
-                  >@hackattack.ccihimaif</a
-                >
-              </li>
-              <li style="color: white">🔥 Powered by Hima IF x CCI Summit</li>
+              <li style="color: white">WhatsApp: +62 821-7876-1450 (Bara)</li>
+              <li style="color: white">WhatsApp: +62 813-7860-0688 (Naila)</li>
+              <li style="color: white">Email: hackattack.ccihimaif25@gmail.com</li>
             </ul>
+          </td>
+        </tr>
+        <tr>
+          <td 
+            class="mobile-padding"
+            style="padding-left: 25px; padding-right: 25px; color: white"
+            >
+            <p style="color: white">Salam hangat, <br>
+          Tim Penyelenggara Hackattack 2025.</p>
           </td>
         </tr>
       </table>
