--- a/public/email-template/emailWorkshopSuccess.html
+++ b/public/email-template/emailWorkshopSuccess.html
@@ -58,63 +58,87 @@
             class="mobile-padding"
             style="padding-left: 25px; padding-right: 25px; color: white"
           >
-            <p style="color: white">🎉 CONGRATS! Workshop Registration Approved</p>
-
-            <p>Hi <strong>{{participantName}}</strong></p>
-            <p>Great news! Your registration for the <strong>{{workshopName}}</strong> workshop has been approved.</p>
-            <h1 style="color: white"><p style="color: white">CONGRATS!</p></h1>
+            <p style="color: white; text-align: center; font-size: 24px;">
+               {{workshopTitle}}
+            </p>
+            <p>Halo <strong>{{participantName}}👋🏼,</strong></p>
+            <p>Terima kasih telah mendaftarkan diri untuk {{workshopName}}</p>
+            <ul style="color: white; padding-left: 10px; list-style-type: none">
+              <li style="color: white">
+                📅 {{workshopDate}}
+              </li>
+              <li style="color: white">
+                🕖 Waktu: 13.00 - 16.00 WIB
+              </li>
+            </ul>
             <p style="color: white">
-              We're excited to have you join us for this amazing learning experience. Here are the important details:
+              Dalam workshop ini, kamu akan dipandu untuk:
+              <ul style="color: white; padding-left: 10px;">
+                <li style="color: white">
+                  {{Benefit1}}
+                </li>
+                <li style="color: white;">
+                  {{Benefit2}}
+                </li>
+                <li style="color: white">                  
+                  {{Benefit3}}
+                </li>
+              </ul>
+            </p>
+            <p style="color: white">
+              🎯 Benefit yang akan kamu dapatkan:
+              <ul style="color: white; padding-left: 10px;">
+                <li style="color: white">
+                  Sertifikat Resmi
+                </li>
+                <li style="color: white;">
+                  Poin TAK (Student Activity Transcript)
+                </li>
+                <li style="color: white">                  
+                  Akses networking dengan peserta lainnya                
+                </li>
+              </ul>
+            </p>
+            <p style="color: white">
+              Pastikan kamu hadir tepat waktu dan siapkan pertanyaan untuk memaksimalkan sesi ini.
             </p>
             
-            <div style="
-              background-color: #333333;
-              border: 2px solid #4CAF50;
-              border-radius: 15px;
-              padding: 20px;
-              margin: 20px 0;
-              color: white;
-              font-family: Arial, sans-serif;
-            ">
-              <h3 style="color: white; margin-top: 0; font-size: 18px; font-weight: bold;">
-                Workshop Details
-              </h3>
-              <p style="color: white; font-size: 14px; line-height: 1.4; margin: 15px 0;">
-                <strong>Workshop:</strong> {{workshopName}}<br>
-                <strong>Participant:</strong> {{participantName}}<br>
-                <strong>Email:</strong> {{participantEmail}}<br>
-                <strong>Institution:</strong> {{institution}}
-              </p>
-            </div>
-            
             <p style="color: white">
-              Further details about the workshop schedule, location, and materials will be sent to you closer to the event date.
+              Untuk info lebih lanjut silahkan join WA Group Berikut: <br>
+              🔗 <strong>link WA Group: https://chat.whatsapp.com/BbjbIbrbu0g5FUiH7uRStw?mode=wwc </strong>
             </p>
             <p style="color: white">
-              If you have any questions, please don't hesitate to contact us at hackattack.ccihimaif25@gmail.com.
-            </p>
-            <p style="color: white">
-              We look forward to seeing you at the workshop!
-            </p>
+              Jika membutuhkan informasi tambahan, silakan hubungi contact person kami yang tercantum di bawah.</p>
           </td>
         </tr>
-        <tr>
+       <tr>
           <td
             class="mobile-padding"
             style="padding-left: 25px; padding-right: 25px; color: white"
           >
+          <p style="color: white">📞 Contact Person:</p>
             <ul style="list-style-type: none; padding: 0; color: white">
-              <li style="color: white">Best Regards, Team HackAttack2025</li>
-              <li style="color: white">
-                🚨 IG:
-                <a
-                  href="https://www.instagram.com/hackattack.ccihimaif/"
-                  style="color: white; text-decoration: underline"
-                  >@hackattack.ccihimaif</a
-                >
-              </li>
-              <li style="color: white">🔥 Powered by Hima IF x CCI Summit</li>
+              <li style="color: white">WhatsApp: +62 821-7876-1450 (Bara)</li>
+              <li style="color: white">WhatsApp: +62 813-7860-0688 (Naila)</li>
+              <li style="color: white">Email: hackattack.ccihimaif25@gmail.com</li>
             </ul>
+          </td>
+        </tr>
+        <tr>
+          <td 
+            class="mobile-padding"
+            style="padding-left: 25px; padding-right: 25px; color: white"
+            >
+          <p><strong>Sampai Jumpa di Workshop! 😁👋🏼</strong></p>
+          </td>
+        </tr>
+        <tr>
+          <td 
+            class="mobile-padding"
+            style="padding-left: 25px; padding-right: 25px; color: white"
+            >
+            <p style="color: white">Salam hangat, <br>
+          Tim Penyelenggara Hackattack 2025.</p>
           </td>
         </tr>
       </table>
