update success email message

--- a/public/email-template/emailBatch2.html
+++ b/public/email-template/emailBatch2.html
@@ -96,10 +96,10 @@
               Seluruh pengumuman serta informasi penting akan disampaikan lewat WhatsApp Group resmi. Untuk <b>KETUA TIM</b> Pastikan Anda segera bergabung agar tidak ketinggalan informasi krusial!
             </p>
             <a
-              href="https://chat.whatsapp.com/Cajsa1MA7CQ3gJ9UfTWy0P?mode=ems_copy_t"
+              href="https://chat.whatsapp.com/BbjbIbrbu0g5FUiH7uRStw?mode=wwc"
               style="color: white; text-decoration: underline"
             >
-              https://chat.whatsapp.com/Cajsa1MA7CQ3gJ9UfTWy0P?mode=ems_copy_t
+              https://chat.whatsapp.com/BbjbIbrbu0g5FUiH7uRStw?mode=wwc
             </a>
             <p style="color: white">
               🚀 Jadi, pastikan kamu hadir dan aktif mengikuti semua rangkaian kegiatan! Untuk memudahkan, kami akan mengirimkan detail teknis dan link workshop melalui email beberapa hari sebelum acara dimulai.
