--- a/public/email-template/emailWorkshopSuccess.html
+++ b/public/email-template/emailWorkshopSuccess.html
@@ -105,7 +105,7 @@
             
             <p style="color: white">
               Untuk info lebih lanjut silahkan join WA Group Berikut: <br>
-              🔗 <strong>link WA Group: https://chat.whatsapp.com/BbjbIbrbu0g5FUiH7uRStw?mode=wwc </strong>
+              🔗 <strong>link WA Group: <a href="https://chat.whatsapp.com/BbjbIbrbu0g5FUiH7uRStw?mode=wwc" style="color: white; text-decoration: underline">https://chat.whatsapp.com/BbjbIbrbu0g5FUiH7uRStw?mode=wwc</a></strong>
             </p>
             <p style="color: white">
               Jika membutuhkan informasi tambahan, silakan hubungi contact person kami yang tercantum di bawah.</p>
